--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel = true
 
 # Mod Properties
 version = 1.0.0+1.19
-maven_group = com.example
-archives_base_name = example_mod
+maven_group = io.github.anonymous123_code
+archives_base_name = boat_mod
 
 # Dependencies are managed at gradle/libs.versions.toml
